--- a/tools/Makefile
+++ b/tools/Makefile
@@ -65,7 +65,7 @@ endif
 
 
 kaldi:
-	test -f kaldi/egs/wsj/s5/utils/parse_options.sh || git clone --depth 1 https://github.com/kaldi-asr/kaldi
+	test -f kaldi/egs/wsj/s5/utils/parse_options.sh || git clone --branch docker-aesrc2020 --depth 1 https://github.com/seblemaguer/kaldi
 
 activate_python.sh:
 	test -f activate_python.sh || { echo "Error: Run ./setup_python.sh or ./setup_anaconda.sh"; exit 1; }
